--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WKpt計算機</title>
     <style>
+        /* ここは元のstyle.cssの内容がheadタグ内に直接記述されている形式です。 */
+        /* もしstyle.cssファイルとして外部化している場合は、<link rel="stylesheet" href="style.css"> のままでOKです。 */
+        /* 今回は元のコードに合わせてここに記述を保持します。 */
         body { font-family: sans-serif; margin: 20px; text-align: center; background-color: #f4f4f4; color: #333; }
         h1 { color: #0056b3; }
         .input-group { margin-bottom: 15px; text-align: left; max-width: 400px; margin-left: auto; margin-right: auto; }
@@ -58,6 +61,21 @@
             font-weight: bold;
             margin-top: 10px;
         }
+        /* 画像とその説明テキストのためのスタイル */
+        .image-caption {
+            text-align: center;
+            margin-top: 10px; /* 上の要素との間隔 */
+            margin-bottom: 20px; /* 下の要素との間隔 */
+            max-width: 400px; /* input-groupに合わせる */
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .image-caption img {
+            max-width: 100%; /* 親要素の幅に合わせて最大幅を調整 */
+            height: auto; /* アスペクト比を維持 */
+            display: block; /* 中央寄せのためにブロック要素にする */
+            margin: 0 auto; /* 中央寄せ */
+        }
     </style>
 </head>
 <body>
@@ -67,19 +85,30 @@
         <label for="tierSelect">兵士ティア:</label>
         <select id="tierSelect">
             <option value="T9">T9</option>
-            <option value="T10" selected>T10</option> <option value="T11">T11</option>
+            <option value="T10" selected>T10</option>
+            <option value="T11">T11</option>
             <option value="T12">T12</option>
         </select>
     </div>
+
     <div class="input-group">
         <label for="currentWKInput">現在のWKpt (0以上の整数):</label>
         <input type="number" id="currentWKInput" value="0" min="0" step="1" pattern="[0-9]*" inputmode="numeric">
+    </div>
+    <div class="image-caption">
+        ※赤枠の数字を入力
+        <br>
+        <img src="images/current_wkpt.jpeg" alt="現在のWKpt入力例">
     </div>
     <div class="input-group">
         <label for="currentDeathPtInput">現在の兵士死亡Pt (0以上の整数):</label>
         <input type="number" id="currentDeathPtInput" value="0" min="0" step="1" pattern="[0-9]*" inputmode="numeric">
     </div>
-
+    <div class="image-caption">
+        ※黄枠の数字を入力
+        <br>
+        <img src="images/soldier_death_pt.jpeg" alt="現在の兵士死亡Pt入力例">
+    </div>
     <button onclick="calculateWKpt()">計算する</button>
 
     <div id="result">各項目を入力して「計算する」ボタンを押してください。</div>
