--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         </select>
     </div>
     <div class="input-group">
-        <label for="currentWKInput">現在のWKpt (0以上の整数):</label>
+        <label for="currentWKInput">現在のWKpt :</label>
         <input type="number" id="currentWKInput" value="0" min="0" step="1" pattern="[0-9]*" inputmode="numeric">
     </div>
     <div class="input-group">
-        <label for="currentDeathPtInput">現在の兵士死亡Pt (0以上の整数):</label>
+        <label for="currentDeathPtInput">現在の兵士死亡Pt :</label>
         <input type="number" id="currentDeathPtInput" value="0" min="0" step="1" pattern="[0-9]*" inputmode="numeric">
     </div>
 
