--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <input type="number" id="currentWKInput" value="0" min="0" step="1" pattern="[0-9]*" inputmode="numeric">
     </div>
     <div class="input-group">
-        <label for="currentDeathPtInput">現在の兵士死亡Pt :</label>
+        <label for="currentDeathPtInput">現在の兵士死亡pt :</label>
         <input type="number" id="currentDeathPtInput" value="0" min="0" step="1" pattern="[0-9]*" inputmode="numeric">
     </div>
 
